# A-Maze-ing

./: Makefile  README.md  README2.md  a_maze_ing.py  config.txt  main.py  maze.txt  mlx-2.2-py3-none-any.whl  pyproject.toml  seed_logs.txt  teste.py  visual.py
mazegen/: generator.py
mazegen.egg-info/: SOURCES.txt
rendering/: 1800.xpm  Maze.py  README2.md  RenderMaze.py  Renderer.py  Window.py  __init__.py  artboard.xpm  card_400.xpm  card_600.xpm  city pop_logo_big.xpm  city pop_logo_medium.xpm  city pop_logo_small.xpm  constants.py  fortune cookie_logo_big.xpm  fortune cookie_logo_medium.xpm  fortune cookie_logo_small.xpm  heigher_maze.txt  los angeles_logo_big.xpm  los angeles_logo_medium.xpm  los angeles_logo_small.xpm  main.py  maze.txt  pastel_logo_big.xpm  pastel_logo_medium.xpm  pastel_logo_small.xpm  seed_logs.txt  utils.py  visual.py
rendering/logo/: city pop_big.xpm  city pop_medium.xpm  city pop_small.xpm  fortune cookie_big.xpm  fortune cookie_medium.xpm  fortune cookie_small.xpm  los angeles_big.xpm  los angeles_medium.xpm  los angeles_small.xpm  pastel_big.xpm  pastel_medium.xpm  pastel_small.xpm
